trying to fix jquery popup jumping

--- a/public/css/todos.css
+++ b/public/css/todos.css
@@ -178,39 +178,19 @@ filter: grayscale(0%);
   	background-position: 0 -20px;
 }
 
-#todo-list li.editing {
-	border-bottom: none;
-	margin-top: -1px;
-	padding: 0;
-}
-
-#todo-list li.editing:last-child {
-	margin-bottom: -1px;
-}
-
-#todo-list li.editing .edit {
-	display: block;
-	width: 98%;
-	padding: 2px 2px 2px 2px;
-	margin: 2px 5px 5px 2px;
-}
-
-#todo-list li.editing .view {
-	display: none;
-}
-
 #todo-list li .view label {
 	word-break: break-word;
 }
 
 #popupEdit {
-  padding:10px;
-  width:80%;
-  height:30%;
+  padding:5px;
+  width:100%;
+  height:50%;
 }
 
-#edit a {
+a.save {
 	cursor: pointer;
+  font-size:12px;
 }
 
 #clear-completed {
